Followup to bug 474759 to fix removing all tags r=Standard8 sr=bienvenu (really this time!)